<resources>
    <string name="app_name">MSU Parking Tips</string>
    <string name="search">Search for Parking...</string>
    <string name="info">Info</string>
    <string name="parkingimage">parkingImage</string>
    <string name="result">Nearest Parking</string>
    <string name="dummy">dummy</string>
    <string name="nextClosest">Nearby:</string>
    <string name="otherParking">Other Lots:</string>
    <string name="second">2.</string>
    <string name="third">3.</string>
    <string name="fourth">4.</string>
    <string name="fifth">5.</string>
    <string name="infoText"> MSU Parking Tips is a helpful guide to find FREE parking on campus! You can begin my clicking the "Search for parking button", on the previous page. This will then generate a list of the nearest parking lots. You can then click on any of the parking lots to get details on times, locations, and pricing (specifically when there is free parking).</string>
    <string name="infoHeading">Welcome to MSU Parking Tips!</string>
    <string name="title_activity_maps">Map</string>
    <string name="map_it">MAP IT</string>
    <string name="firstOption">First Option</string>
    <string name="distance">Distance in meters</string>
    <string name="secondOption"> Second Option</string>
    <string name="thirdOption"> Third Option</string>
    <string name="fourthOption"> Fourth Option</string>
    <string name="address">Adress:</string>
    <string name="free_hours">Free Hours:</string>
    <string name="lot_fees">Fees:</string>
    <string name="fifthOption">Fifth Option</string>
    <string name="tips">Tips:</string>
    <string name="lot_and_address"><![CDATA[Lot&Address:]]></string>
    <string name="pass_info">Pass Info</string>
</resources>
