<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    tools:context="edu.msu.pinkoski.project3_team16.ResultActivity">


    <TextView
        android:id="@+id/textResult"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:clickable="true"
        android:onClick="onOption1"
        android:text="@string/result"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textPlace"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textResult"
        android:layout_centerInParent="true"
        android:layout_margin="8sp"
        android:background="@color/colorPrimary"
        android:onClick="onOption1"
        android:text="@string/firstOption"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textDistance"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/textPlace"
        android:text="@string/distance"/>

    <TextView
        android:id="@+id/textOtherCloseParking"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textDistance"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:textColor="@color/black"
        android:text="@string/otherParking"/>

    <TextView
        android:id="@+id/textSecondLotLabel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textOtherCloseParking"
        android:layout_marginBottom="8sp"
        android:layout_marginStart="8sp"
        android:layout_marginTop="8sp"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:gravity="end"
        android:onClick="onOption2"

        android:text="@string/second"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textSecondLot"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textSecondLotLabel"
        android:layout_alignBottom="@+id/textSecondLotLabel"
        android:layout_marginEnd="8sp"
        android:layout_toEndOf="@+id/textSecondLotLabel"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:onClick="onOption2"
        android:text="@string/secondOption"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textThirdLotLabel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textSecondLotLabel"
        android:layout_marginBottom="8sp"
        android:layout_marginStart="8sp"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:gravity="end"
        android:onClick="onOption3"
        android:text="@string/third"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textThirdLot"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:onClick="onOption3"
        android:text="@string/thirdOption"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:layout_alignBaseline="@+id/textThirdLotLabel"
        android:layout_alignBottom="@+id/textThirdLotLabel"
        android:layout_toEndOf="@+id/textThirdLotLabel" />

    <TextView
        android:id="@+id/textFourthLotLabel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textThirdLot"
        android:layout_marginBottom="8sp"
        android:layout_marginStart="8sp"
        android:layout_marginTop="8sp"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:gravity="end"
        android:onClick="onOption4"
        android:text="@string/fourth"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textFourthLot"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textFourthLotLabel"
        android:layout_alignBottom="@+id/textFourthLotLabel"
        android:layout_marginEnd="8sp"
        android:layout_toEndOf="@+id/textFourthLotLabel"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:onClick="onOption4"
        android:text="@string/fourthOption"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />


    <TextView
        android:id="@+id/textFifthLotLabel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textFourthLot"
        android:layout_marginBottom="8sp"
        android:layout_marginStart="8sp"
        android:layout_marginTop="8sp"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:gravity="end"
        android:onClick="onOption5"
        android:text="@string/fifth"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textFifthLot"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textFifthLotLabel"
        android:layout_alignBottom="@+id/textFifthLotLabel"
        android:layout_marginEnd="8sp"
        android:layout_toEndOf="@+id/textSecondLotLabel"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:onClick="onOption5"
        android:text="@string/fifthOption"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

</RelativeLayout>