<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical">

    <view
        android:id="@+id/lotPictureView"
        class="edu.msu.pinkoski.project3_team16.LotImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.5" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">

        <TextView
            android:id="@+id/textFreeHours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/free_hours"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">

        <TextView
            android:id="@+id/textAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/address"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">

        <TextView
            android:id="@+id/textLotFees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/lot_fees"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">

        <TextView
            android:id="@+id/textLotNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/lot"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/googleMapsButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="0.1"
        android:background="@color/colorPrimary"
        android:onClick="buttonMap"
        android:text="@string/map_it"
        android:textColor="@color/white"
        android:textSize="24sp" />


</LinearLayout>
