
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.msu.pinkoski.project3_team16.MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageStudentParking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/student_parking_sign"
            android:contentDescription="@string/parkingimage" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="0dp"
        android:gravity="center_horizontal|center_vertical">

        <Button
            android:id="@+id/newUserButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/search"
            android:textSize="24sp"
            android:gravity="center_horizontal|center_vertical"
            android:layout_margin="8dp"
            android:onClick="onSearchForParking"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/buttonInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/info"
            android:layout_margin="8dp"
            android:textSize="24sp"
            android:onClick="onInfo"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/white" />


    </LinearLayout>



</LinearLayout>

</RelativeLayout>


